# hit_and_blow

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: advanced_usage.md  algorithms.md
examples/: README.md  adversarial_game.py  advisor_mode.py  compare_agents.py  external_advisor.py  hybrid_q_advisor.py  multi_agent_qlearning_trainer.py  play_simple.py  q_table_viewer.py  qlearning_trainer.py  self_play_batch.py  self_play_simple.py
hit_and_blow/: __init__.py
hit_and_blow/agents/: __init__.py  bandit.py  base.py  genetic.py  greedy.py  heuristic.py  hybrid_bandit.py  hybrid_q_learning.py  hybrid_sarsa.py  monte_carlo.py  pattern_matching.py  probabilistic.py  q_learning.py  registry.py  rulebase.py  sarsa.py
hit_and_blow/core/: __init__.py  advice.py  advisor.py  agent.py  environment.py  utils.py
hit_and_blow/interface/: __init__.py  advisor.py  compare_agents.py  compare_rl.py  main.py  play_agent.py  train_rl.py
tests/: test_advisor.py  test_agent_environment.py  test_core.py  test_hybrid_agent.py  test_hybrid_q_learning.py
