[tool.poetry]
name = "hit-and-blow"
version = "0.1.0"
description = "Hit and Blow（数当てゲーム）の環境"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.7.0"
japanize-matplotlib = "^1.1.3"
numpy = "^1.24.0"
pandas = "1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
play = "hit_and_blow.interface.main:main"
play-agent = "hit_and_blow.interface.play_agent:main"
compare-agents = "hit_and_blow.interface.compare_agents:main"
train-rl = "hit_and_blow.interface.train_rl:main"
compare-rl = "hit_and_blow.interface.compare_rl:main" 